# ezmsg-tools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/source/: conf.py
scripts_nbs/: monitor_pipeline.py
scripts_nbs/orphan/: run_attach.py
scripts_nbs/profiler/: ecog_preproc.py  mp_demo.py  parse_profiler.ipynb  profiler.py
src/ezmsg/graphviz/: dag.py  proc.py
src/ezmsg/graphviz/examples/: ez_count.py  monitor.py
src/ezmsg/graphviz/pygame/: base.py  dag.py  timeseries.py
src/ezmsg/graphviz/shmem/: shmem.py  shmem_mirror.py
src/ezmsg/tools/: dag.py  proc.py
src/ezmsg/tools/perfmon/: main.py
src/ezmsg/tools/shmem/: shmem.py  shmem_mirror.py
src/ezmsg/tools/sigmon/: main.py
src/ezmsg/tools/sigmon/pygame/: base.py  dag.py
src/ezmsg/tools/sigmon/shmem/: shmem.py  shmem_mirror.py
src/ezmsg/tools/sigmon/ui/: base.py  dag.py  timeseries.py
src/ezmsg/vis/: dag.py  mirror.py  proc.py  unit.py
src/ezmsg/vis/examples/: ez_count.py  monitor.py
src/ezmsg/vis/pygame/: base.py  dag.py  timeseries.py
src/ezmsg/vis/renderer/: base.py  timeseries.py
tests/: test_shmem_mirror.py  test_shmem_sink.py
