[project]
name = "ezmsg-graphviz"
description = "ezmsg namespace package to visualize running graphs"
authors = [
  { name = "Chadwick Boulay", email = "chad@cbneurotech.com"}
]
readme = "README.md"
requires-python = ">=3.10.15"
dynamic = ["version"]
dependencies = [
  "ezmsg>=3.6.0",
  "numpy>=1.26.0",
  "pygame>=2.5.2",
  "pygraphviz",
  "pandas",
  "typer>=0.12.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.1",
    "scipy>=1.14.1",
]
test = [
    "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/ezmsg/graphviz/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ezmsg"]
