[project]
name = "ezmsg-tools"
description = "ezmsg namespace package containing tools for working with ezmsg graphs."
authors = [
  { name = "Chadwick Boulay", email = "chad@cbneurotech.com"}
]
readme = "README.md"
requires-python = ">=3.10.15"
dynamic = ["version"]
dependencies = [
  "ezmsg-sigproc>=1.8.1",
  "ezmsg>=3.6.1",
  "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.1",
    "scipy>=1.14.1",
    "ezmsg-sigproc>=1.6.0",
]
test = [
    "ezmsg-sigproc>=1.6.0",
    "pytest>=8.3.3",
]
perfmon = [
    "dash-extensions>=1.0.19",
    "dash>=2.18.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "typer>=0.15.1",
    "pygtail>=0.14.0",
    "dash-bootstrap-components>=1.6.0",
    "ezmsg-sigproc>=1.8.1",
]
sigmon = [
    "pygame>=2.6.1",
    "pygraphviz>=1.14",
    "typer>=0.15.1",
]

[project.scripts]
ezmsg-performance-monitor = "ezmsg.tools.perfmon.main:main"
ezmsg-signal-monitor = "ezmsg.tools.sigmon.main:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/ezmsg/tools/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ezmsg"]
